--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="#050505"
     android:orientation="vertical"
-    android:layout_margin="16dp"
     tools:context=".LoginActivity">
 
 
     <FrameLayout
+        android:id="@+id/flContainerTop"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/flContainer"
+        android:layout_width="match_parent"
+        android:layout_height="441dp"
         android:layout_above="@id/bottom_navigation"
-        android:id="@+id/flContainer"></FrameLayout>
+
+        android:layout_below="@+id/flContainerTop"
+        android:layout_marginTop="0dp"
+        android:background="#FFFFFF"></FrameLayout>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="#FFFFFF"
         app:menu="@menu/menu_bottom_navigation" />
 </RelativeLayout>
