--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent">
+    android:background="#FFFFFF">
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_margin="16dp"
+        android:orientation="vertical"
         tools:context=".LoginActivity">
 
         <ImageView
@@ -25,28 +24,39 @@
 
         <EditText
             android:id="@+id/etUsername"
+            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
+            android:background="@drawable/rounded_edittext"
             android:ems="10"
-            android:inputType="text"
-            android:hint="New Username"/>
+            android:hint="New Username"
+            android:inputType="text" />
+
         <EditText
             android:id="@+id/etPassword"
+            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="1"
+            android:background="@drawable/rounded_edittext"
             android:ems="10"
-            android:inputType="textPassword"
-            android:hint="New Password"/>
+            android:hint="New Password"
+            android:inputType="textPassword" />
+
         <EditText
             android:id="@+id/etConfirmPassword"
+            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="textPassword"
-            android:hint="Confirm Password"/>
+            android:hint="Confirm Password"
+            android:background="@drawable/rounded_edittext"
+            android:inputType="textPassword" />
 
         <Button
             android:id="@+id/btnSignUp"
@@ -59,7 +69,6 @@
             android:textColor="#000000"
             android:textColorHighlight="#9E3B3B" />
     </LinearLayout>
-
 
 
 </RelativeLayout>
