--- a/app/src/main/res/layout/fragment_profile_top.xml
+++ b/app/src/main/res/layout/fragment_profile_top.xml
@@ -39,4 +39,25 @@
         android:layout_marginEnd="27dp"
         android:layout_toEndOf="@+id/ivPicture"
         android:text="New Profile Pic" />
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </TableLayout>
 </RelativeLayout>
