--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -35,17 +35,9 @@
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvCaption"
-        android:layout_marginTop="5dp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/tvCaption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_below="@+id/ivImage"
         android:layout_marginTop="0dp"
-        tools:text="Caption Here" />
+        android:text="TextView" />
 
     <TextView
         android:id="@+id/tvTimestamp"
@@ -61,7 +53,7 @@
         android:id="@+id/etComment"
         android:layout_width="284dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/btnSubmit"
+        android:layout_below="@+id/ibLike"
         android:layout_alignParentStart="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
@@ -87,4 +79,26 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/etComment"
         android:layout_marginTop="0dp" />
+
+    <ImageButton
+        android:id="@+id/ibLike"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_below="@+id/tvDescription"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:background="#00202020"
+        android:scaleType="fitCenter"
+        android:src="@mipmap/ic_heart_clear_foreground" />
+
+    <TextView
+        android:id="@+id/tvNumLikes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/etComment"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_toEndOf="@+id/ibLike"
+        tools:text="11" />
 </RelativeLayout>
