--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -99,4 +99,14 @@
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp"
         android:text="TextView" />
+
+    <TextView
+        android:id="@+id/tvNumLikes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tvDescription"
+        android:layout_marginStart="60dp"
+        android:layout_marginBottom="0dp"
+        android:layout_toEndOf="@+id/ibShare"
+        tools:text="24" />
 </RelativeLayout>
